register user and update user informations
